Prevent PTN text from overlapping share menu

--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,7 @@
   font-size: 1.3em;
   line-height: 1.5em;
   padding: $edge;
+  padding-right: $edge + $fab-height-small;
   margin: 0;
   white-space: pre-wrap;
   text-shadow: 0 1px 1px rgba(0,0,0,0.5);
